Update from a39aa5a Original message: More robust END handling while loading

--- a/md_doc_file_format.html
+++ b/md_doc_file_format.html
@@ -250,7 +250,7 @@ Empty lines, comments or EOF</h1>
 <li>empty lines are ignored</li>
 <li>also every line starting with hashtag (#) is ignored</li>
 <li>(due to the way parsing is implemented any extra info written after a line is also ignored IF NO PARAMETERS CAN FOLLOW)</li>
-<li>parsing terminates without error when EOF is reached or a line contains <code>END</code></li>
+<li>parsing terminates without error when EOF is reached or a line starts with <code>END</code></li>
 <li>don't press CTRL-C, because it throws and exception. </li>
 </ul>
 </div></div><!-- contents -->
